<resources>
    <string name="app_name">DressApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <!-- Descripciones de los íconos -->
        <string name="like_icon_desc">Icono de Me gusta</string>
        <string name="comment_icon_desc">Icono de Comentarios</string>

        <!-- Descripciones de los contadores -->
        <string name="like_count_desc">Contador de Me gusta</string>
        <string name="comment_count_desc">Contador de Comentarios</string>

    <string name="post_image_desc">Imagen de la publicación</string>
    <string name="profile_image_desc">Imagen de perfil</string>
    <string name="username_desc">Nombre de usuario</string>
    <string name="post_content_desc">Contenido de la publicación</string>
    <string name="like_button_desc">Botón de Me gusta</string>
    <string name="comment_button_desc">Botón de Comentarios</string>
    <string name="share_button_desc">Botón de Compartir</string>
    <string name="home_text">Home</string>
    <string name="create_text">Create</string>
    <string name="profile_text">Profile</string>
    <string name="articles_icon_desc" />
</resources>