<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Imagen de la publicación -->
    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/post_image_placeholder"
        android:contentDescription="@string/post_image_desc" />

    <!-- Overlay con gradiente que contiene la información del usuario y el contenido de la publicación -->
    <LinearLayout
        android:id="@+id/overlay_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/gradient_bottom_overlay"
        android:gravity="bottom">

        <!-- Información del usuario -->
        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <!-- Imagen de perfil -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile_picture_placeholder"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:contentDescription="@string/profile_image_desc" />

            <!-- Nombre de usuario -->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="usuario"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:contentDescription="@string/username_desc" />
        </LinearLayout>

        <!-- Contenido de la publicación -->
        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="Este es el contenido de la publicación."
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:contentDescription="@string/post_content_desc"
            android:padding="8dp"
           />
    </LinearLayout>

    <!-- Controles de la publicación -->
    <LinearLayout
        android:id="@+id/post_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Botón de Like -->
        <ImageView
            android:id="@+id/like_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_like"
            android:contentDescription="@string/like_button_desc"
            android:layout_marginBottom="16dp" />

        <!-- Botón de Comentarios -->
        <ImageView
            android:id="@+id/comment_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_comment"
            android:contentDescription="@string/comment_button_desc"
            android:layout_marginBottom="16dp" />

        <!-- Botón de Compartir -->

    </LinearLayout>

</RelativeLayout>
